css in da house

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Ethic</title>
     <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/simple-sidebar.css">
   </head>
 
