--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Ethic</title>
     <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/libs/select2/dist/css/select2.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/simple-sidebar.css">
   </head>
@@ -12,6 +13,7 @@
 
     <!-- the scripts -->
     <script src="./build/main.js"></script>
+    <script src="assets/libs/select2/dist/js/select2.min.js"></script>  <!-- FIXME: do we need the full? -->
     <script>
     window.ethic.init({
       container: "#ethic-app"
