include dropzonejs css in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Ethic</title>
     <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/libs/select2/dist/css/select2.min.css">
+    <link rel="stylesheet" href="assets/libs/dropzone/dist/dropzone.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/simple-sidebar.css">
   </head>
