--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/libs/dropzone/dist/dropzone.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/simple-sidebar.css">
+    <script src="https://js.stripe.com/v2/"></script>
   </head>
 
   <body>
